# iree-turbine

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  REUSE.toml  causal_true.mlir  ci-frozen-reqs.txt  cool.mlir  custom_mask.mlir  extend.rpd  gemm_dyn_on.mlir  iree-requirements-ci.txt  iree-requirements.txt  mypy.ini  notebook-scaled-mma.ipynb  pyproject.toml  pytorch-cpu-requirements.txt  pytorch-rocm-requirements.txt  requirements-iree-pinned.txt  requirements-iree-unpinned.txt  requirements-wave-runtime.txt  requirements.txt  setup.cfg  setup.py  test.py  vanilla_attention_bench.py  version.json  version_info.json  version_info.json.license  wave_extend_attention_kernel_16x1x128x128x2x466x1024x64.mlir
.github/: CODEOWNERS
.github/workflows/: build_packages.yml  ci-tk.yaml  ci.yaml  perf.yaml  perf_mi250.yaml  perf_mi300.yaml  perftest.yaml  pre-commit.yaml  test.yml  test_build_release.yml  test_models.yml  test_pytorch_nightly.yaml  test_shark.yml  test_shark_studio.yml  update_iree_requirement_pins.yml
build_tools/: build_linux_package.sh  build_release.py  compute_local_version.py  post_build_release_test.sh  post_pypi_release_test.sh  promote_whl_from_rc_to_final.py  pypi_deploy.sh  pytorch-cpu-requirements-nightly.txt  update_iree_requirement_pins.py  update_iree_version_pins.py
core/: setup.py
docs/: .readthedocs.yaml  README.md  conf.py  index.rst  releasing.md  requirements.txt
docs/api_docs/: .readthedocs.yaml  README.md  conf.py  index.rst  requirements.txt
docs/api_docs/aot/: aot.rst
docs/api_docs/core/: aot.rst  runtime.rst  support.rst  tools.rst
docs/api_docs/kernel/: kernel.rst  wave.rst  wave_ops.rst
docs/core/: aot.rst  dynamo.rst  runtime.rst  support.rst  tools.rst
docs/infra/: releasing.md
docs/kernel/: runtime.rst  shared_memory.rst  wave.rst  wave_codegen.rst
docs/wave/: aplp.rst  conv.rst  fused_softmax.rst  gemm_tutorial.rst  getting_started.rst  in_thread_transpose.rst  minimize_global_loads.rst  optimize_schedule.rst  pingpong_reordering.rst  schedule.rst  schedule_modifier.rst  shared_memory.rst  system_architecture.rst  trace.rst  wave.rst  workgroup_reordering.rst
examples/aot_mlp/: README.md  mlp_export_dynamic.py  mlp_export_simple.py  requirements.txt
examples/backward_conv_decomp/: backward_conv.py
examples/eager_mlp/: mlp_eager_simple.py
examples/jupyter/: wave_gemm_example.ipynb
examples/llama2_inference/: README.md  llama2.ipynb  llama2_state_schema.json  requirements.txt
examples/mlp_train/: ut_mlp_train.py
examples/resnet-18/: README.md  requirements.txt  resnet-18.py
examples/runtime_torture/: README.md  launchable_torture.py
iree/turbine/: __init__.py
iree/turbine/aot/: build_actions.py  compiled_module.py  decompositions.py  exporter.py  fx_programs.py  params.py  tensor_traits.py
iree/turbine/boo/: README.md  cache.py  manager.py
iree/turbine/dynamo/: decompositions.py  executor.py  passes.py  tensor.py  type_conversion.py
iree/turbine/kernel/: kernels.py
iree/turbine/kernel/wave/runtime/: CMakeLists.txt  runtime.cpp  setup.py
iree/turbine/ops/: __init__.py  _jinja_test_ops.py  _str_format_test_ops.py  conv_fwd.py  insert_slice.py  iree.py  mlir_kernel.py
iree/turbine/runtime/: __init__.py  device.py  invoke.py  launch.py  tracing.py
iree/turbine/support/: conversions.py  debugging.py  exceptions.py  ir_imports.py  tools.py  torch.py
iree/turbine/tools/: interpreter.py
iree/turbine/transforms/: builder.py  merger.py  rewriter.py
lit_tests/: .lit_test_times.txt  lit.cfg.py
lit_tests/kernel/wave/: attention.py  barriers.py  casting.py  codegen.py  expansion.py  gemm.py  igemm.py  index_sequence_analysis.py  integration.py  iteration.py  load_indirect.py  location.py  minimize_global_loads.py  minimize_shared_allocs.py  (+12 more)
playground/: attention_alibi_template.py  attention_alibi_test.py  attention_with_rpe_template.py  attention_with_rpe_test.py  causal_attention_template.py  causal_attention_test.py  stress.py  triangular.py  vanilla_attention.py  vanilla_attention_template.py
shark_turbine/: __init__.py
shark_turbine/aot/: __init__.py  compiled_module.py  decompositions.py  exporter.py  fx_programs.py  params.py  tensor_traits.py
shark_turbine/dynamo/: __init__.py  decompositions.py  executor.py  passes.py  tensor.py  type_conversion.py
shark_turbine/importers/: README.md  ir.py  utils.py
shark_turbine/kernel/: __init__.py
shark_turbine/ops/: __init__.py  _jinja_test_ops.py  _str_format_test_ops.py  iree.py
shark_turbine/runtime/: __init__.py  device.py  launch.py  tracing.py
shark_turbine/support/: __init__.py  conversions.py  debugging.py  exceptions.py  ir_imports.py  logging.py
shark_turbine/tools/: __init__.py  interpreter.py
shark_turbine/transforms/: builder.py  merger.py  rewriter.py
tests/: conftest.py  top_level_package_test.py
tests/aot/: api_test.py  args_test.py  compiled_exported_program_test.py  decompositions_test.py  dynamic_shape_export_test.py  functionalize_test.py  fx_programs_test.py  fx_programs_test_device.py  globals_test.py  iree_procedural_test.py  jittable_test.py  non_strict_export_test.py  params_test.py  turbine_generate_test.py
tests/dynamo/: backend_smoke_test.py  backend_test.py  ddp_backend_test.py  importer_backward_test.py  importer_basic_test.py  importer_dynamic_test.py  llama_test.py  mninst_test.py  tensor_scalar_op_conversion_importer_test.py  tensor_test.py  testutils.py  type_conversion_test.py
tests/examples/: aot_mlp_test.py
tests/kernel/: aot_kernel_test.py  arith_test.py  dispatch_codegen_test.py  fused_attention_f8_test.py  fused_attention_test.py  indexing_test.py  simple_kernel_test.py  types_test.py  vector_codegen_test.py
tests/ops/: conv_2d_nhwc_fhwc_test.py  conv_fwd_test.py  insert_slice_test.py  iree_test.py  mlir_kernel_test.py  optional_args_test.py  optional_returns_test.py
tests/runtime/: device_stream_test.py  device_test.py  launch_test.py
tests/support/: conversions_test.py  tools_test.py
tests/tools/: interpreter_test.py  raw_tensor_test.py
(+487 files in other folders)
